# sphinx-pitch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .remarkrc.json  LICENSE  README.md  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: __init__.py  api.rst  conf.py  demo_presentation.rst  examples.rst  index.rst  quickstart.rst  requirements.txt  syntax.rst
examples/: README.rst
sphinx_pitch/: __init__.py  __version__.py
sphinx_pitch/static/: pitch.css
